added creation of radio buttons and changed JSON data format

--- a/css/style.css
+++ b/css/style.css
@@ -5,3 +5,14 @@
   position: absolute;
   display: none;
 }
+#selectionArea{
+  display: none;
+  background-color: black;
+  
+}
+h3 {
+  color: lightgrey;
+}
+label {
+  color: lightgrey;
+}
