--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,15 @@ label
   height: 100vw;
   width: 100vw
 }
+
+.center
+{ position: absolute;
+  top: 50%;
+  margin: auto;
+  width: 30%;
+  transform: translate(0, -50%);
+  text-align: center;
+}
 #example1Text
 {
   display: none;
